--- a/manifest.json
+++ b/manifest.json
@@ -9,5 +9,15 @@
       "src": "rainbow_128.png",
       "sizes": "128x128"
     }
-  ]
+    {
+      "src": "rainbow_256.png",
+      "sizes": "256x256"
+    }
+    {
+      "src": "rainbow_512.png",
+      "sizes": "512x512"
+    }
+],
+"background_color": "#9B68AB",
+"theme_color": "#9B68AB"
 }
