--- a/manifest.json
+++ b/manifest.json
@@ -1,23 +1,22 @@
 {
-  "name": "Rainbow Lights",
-  "short_name": "Rainbow Lights",
-  "lang": "en-US",
-  "start_url": "/",
-  "display": "fullscreen",
-  "icons": [
-    {
-      "src": "rainbow_128.png",
-      "sizes": "128x128"
-    }
-    {
-      "src": "rainbow_256.png",
-      "sizes": "256x256"
-    }
-    {
-      "src": "rainbow_512.png",
-      "sizes": "512x512"
-    }
-],
-"background_color": "#9B68AB",
-"theme_color": "#9B68AB"
+    "name": "Rainbow Lights",
+    "short_name": "Rainbow Lights",
+    "lang": "en-US",
+    "start_url": ".",
+    "display": "fullscreen",
+    "icons": [{
+            "src": "rainbow_128.png",
+            "sizes": "128x128"
+        },
+        {
+            "src": "rainbow_256.png",
+            "sizes": "256x256"
+        },
+        {
+            "src": "rainbow_512.png",
+            "sizes": "512x512"
+        }
+    ],
+    "background_color": "#9B68AB",
+    "theme_color": "#9B68AB"
 }
